# Climafetch

./: CMakeLists.txt  LICENSE  README.md  TestApiData.json  climafetch  main.cpp
